fix(site): Retirer les scrollbars visible

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
 * {
     font-family: "Madimi One";
     user-select: none;
+    scrollbar-width: none;
 }
 
 html,
