--- a/jeux/7differences/7differences.css
+++ b/jeux/7differences/7differences.css
@@ -2,6 +2,10 @@
     position: relative;
 }
 
+body {
+	overflow: hidden
+}
+
 @keyframes slideInFromBottom {
     0% {
         transform: translateY(400%);
