--- a/jeux/pacman/css/pacman.css
+++ b/jeux/pacman/css/pacman.css
@@ -3,6 +3,10 @@
 	src: url('../css/Quadrit.ttf');
 }
 
+body {
+	overflow: hidden
+}
+
 #message {
 	position: relative;
 	display: inline;
